[package]
name = "graph-algoritms"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graph-algoritms"
test = false
bench = true
path = "src/main.rs"


[dependencies]
serde_json = "1.0"
js-sys = "0.3"
serde = { version = "~1.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ['console'] }
ndarray = "0.15.6"

[profile.dev]
debug = true
opt-level = 3
codegen-units = 1
lto = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
